
Dingus codenamed "IC2005 demo"
========

050422: Removed old unused GUI stuff from gfx/gui.
050418: Dynamic index buffer manager added (CDynamicIBManager).
		CVBChunk is now TVBChunk (typedef for CBufferChunk<CD3DVertexBuffer>).
		gfx/geometry/VBChunk.h is no more, use gfx/geometry/BufferChunk.h now.
050416: Character animator now supports bone scaling.
050413:	rdtsc based timer added to utils (cputimer). Mostly for debugging.
050411:	Character animator now has history buffer for blending fast changing
		anims. Also can synch-blend walk cycles.
050411: Added ringdeque<T> to utils.
050410:	Removed unused anim abstraction layers (channels, context, listeners).
		Collapsed IAnimStream<T> and all derived classes into one concrete
		CAnimStream<T> class.